k8s/security/clients/client-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: client-ingress
  namespace: restauranty

spec:

  podSelector:

    matchLabels:

      app: client

  policyTypes:

  - Ingress

  ingress:

  - from:

    - ipBlock:

        cidr: 10.0.0.0/8

    ports:

    - protocol: TCP
      port: 80
